# Arduino-watering-system

./: .gitignore  README.md
box/: box.bak  box.dwg
code/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  code.ino  compose.yaml  main.cpp  platformio.ini  requirements.txt  vcpkg.json
code/arduinoDebugger/: main.cpp
code/lib/: AutoCycle.cpp  AutoCycle.hpp  Clock.cpp  Clock.hpp  Config.h  ControlUnit.cpp  ControlUnit.h  ControlUnit.ui  Debugger.cpp  Display.cpp  Keypad.cpp  Moisture.cpp  Moisture.hpp  MyString.cpp  MyString.hpp  MyTime.cpp  MyTime.hpp  PageSelector.cpp  PageSelector.hpp  UnitDisplay.cpp  UnitDisplay.hpp  Valve.cpp  Valve.hpp
code/lib/arduino-lib/: Button.cpp  Button.h  HwClock.cpp  HwClock.hpp  HwDebugger.cpp  HwDebugger.hpp  HwDisplay.cpp  HwDisplay.hpp  HwKeypad.cpp  HwKeypad.hpp  HwMainSwitch.cpp  HwMainSwitch.hpp  HwMemory.cpp  HwMemory.hpp  HwMoisture.hpp  HwTimer.cpp  HwValve.cpp  HwValve.hpp  HwValveGroup.cpp  HwValveGroup.hpp  LiquidCrystal_I2C.h
code/lib/clay-lib/: CMakeLists.txt  ClayClock.cpp  ClayClock.hpp  ClayControlUnit.cpp  ClayControlUnit.hpp  ClayDebugger.cpp  ClayDebugger.hpp  ClayDisplay.cpp  ClayDisplay.hpp  ClayKeypad.cpp  ClayKeypad.hpp  ClayMainSwitch.cpp  ClayMainSwitch.hpp  ClayMemory.cpp  ClayMemory.hpp  ClayMoisture.cpp  ClayMoisture.hpp  ClayTimer.cpp  ClayTimer.hpp  ClayUi.c  ClayUi.h  ClayValveGroup.cpp  ClayValveGroup.hpp
code/lib/clay-lib/ClayUi/: ClayClockUi.cpp  ClayClockUi.hpp  ClayControlUnitUi.cpp  ClayControlUnitUi.hpp  ClayDebuggerUi.cpp  ClayDebuggerUi.hpp  ClayDisplayUi.cpp  ClayDisplayUi.hpp  ClayKeypadUi.cpp  ClayKeypadUi.hpp  ClayMoistureUi.cpp  ClayMoistureUi.hpp  ClayValveGroupUi.cpp  ClayValveGroupUi.hpp  clay.h
code/lib/clay-lib/UI/: buttonsUi.c  buttonsUi.cpp  buttonsUi.h  buttonsUi.hpp  clayConstants.h  clayUi.c  clayUi.cpp  clayUi.h  clayUi.hpp  debuggerUi.c  debuggerUi.cpp  debuggerUi.h  debuggerUi.hpp  displayUi.c  displayUi.cpp  displayUi.h  displayUi.hpp  etvsUi.c  etvsUi.cpp  etvsUi.h  etvsUi.hpp
code/lib/core/: AutoCycle.cpp  AutoCycle.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Debugger.cpp  Debugger.hpp  Keypad.cpp  Keypad.hpp  MainSwitch.cpp  MainSwitch.hpp  Memory.cpp  Memory.hpp  Moisture.cpp  Moisture.hpp  MyDate.cpp  MyDate.hpp  MyDateTime.cpp  MyDateTime.hpp  MyString.cpp  MyString.hpp  MyTime.cpp  MyTime.hpp  Overrider.cpp  Overrider.hpp  PageSelector.cpp  PageSelector.hpp  Timer.hpp  UnitDisplay.cpp  UnitDisplay.hpp  Valve.cpp  Valve.hpp  ValveGroup.hpp  ValveGroup.inl
code/lib/core-lib/: AutoCycle.cpp  AutoCycle.hpp  CMakeLists.txt  Clock.hpp  Debugger.cpp  Debugger.hpp  Keypad.hpp  MainSwitch.hpp  Memory.hpp  Moisture.hpp  Overrider.hpp  PageSelector.cpp  PageSelector.hpp  Timer.hpp  UnitDisplay.cpp  UnitDisplay.hpp  Valve.cpp  Valve.hpp  ValveGroup.cpp  ValveGroup.hpp  ValveGroup.inl
code/lib/date-time/: CMakeLists.txt  MyDate.cpp  MyDate.hpp  MyDateTime.cpp  MyDateTime.hpp  MyTime.cpp  MyTime.hpp
code/lib/date-time-lib/: CMakeLists.txt  MyDate.cpp  MyDate.hpp  MyDateTime.cpp  MyDateTime.hpp  MyTime.cpp  MyTime.hpp
code/lib/desktop-clay/: CMakeLists.txt  ClayClock.cpp  ClayClock.hpp  ClayControlUnit.cpp  ClayControlUnit.hpp  ClayDebugger.cpp  ClayDebugger.hpp  ClayDisplay.cpp  ClayDisplay.hpp  ClayKeypad.cpp  ClayKeypad.hpp  ClayMainSwitch.cpp  ClayMainSwitch.hpp  ClayMemory.cpp  ClayMemory.hpp  ClayMoisture.cpp  ClayMoisture.hpp  ClayTimer.cpp  ClayTimer.hpp  ClayValveGroup.cpp  ClayValveGroup.hpp  StdClock.cpp  StdClock.hpp  StdDebugger.cpp  StdDebugger.hpp  StdDisplay.cpp  StdDisplay.hpp  StdKeypad.hpp  StdMainSwitch.hpp  StdMemory.cpp  StdMemory.hpp  StdMoisture.cpp  StdMoisture.hpp  StdTimer.hpp  StdValveGroup.hpp
code/lib/desktop-clay/desktop-clay-ui/: ClayClockUi.cpp  ClayClockUi.hpp  ClayControlUnitUi.cpp  ClayControlUnitUi.hpp  ClayDebuggerUi.cpp  ClayDebuggerUi.hpp  ClayDisplayUi.cpp  ClayDisplayUi.hpp  ClayKeypadUi.cpp  ClayKeypadUi.hpp  ClayMoistureUi.cpp  ClayMoistureUi.hpp  ClayValveGroupUi.cpp  ClayValveGroupUi.hpp  clay_renderer_raylib.c  clay_renderer_raylib.h
code/lib/hardware-arduino/: CMakeLists.txt  HwClock.cpp  HwClock.hpp  HwDebugger.cpp  HwDebugger.hpp  HwDisplay.cpp  HwDisplay.hpp  HwKeypad.hpp  HwMainSwitch.hpp  HwMemory.cpp  HwMemory.hpp  HwMoisture.hpp  HwTimer.hpp  HwValveGroup.hpp
code/lib/hardware-arduino/arduino/: CMakeLists.txt
code/lib/hw-lib/: Button.cpp  DS1302.cpp  DS1302.h  HwClock.cpp  HwClock.hpp  HwDebugger.cpp  HwDisplay.cpp  HwDisplay.hpp  HwKeypad.cpp  HwKeypad.hpp  HwMemory.cpp  HwMemory.hpp  HwMoisture.cpp  HwMoisture.hpp  HwValve.cpp  HwValve.hpp  LiquidCrystal_I2C.cpp
code/lib/pages/: EditClock.cpp  EditClock.hpp  EditEtvDays.cpp  EditEtvDays.hpp  EditEtvTime.cpp  EditEtvTime.hpp  EditSRWatered.cpp  EditSRWatered.hpp  EditTStart.cpp  EditTStart.hpp  Home.cpp  Home.hpp  ManualEtv.cpp  ManualEtv.hpp  Page.cpp  Page.hpp  PageController.cpp  PageController.hpp  Settings1.cpp  Settings1.hpp  Settings2.cpp  Settings2.hpp  Settings3.cpp  Settings3.hpp  Settings4.cpp  Settings4.hpp  Settings5.cpp  Settings5.hpp  Settings6.cpp  Settings6.hpp
code/lib/qt-lib/: CMakeLists.txt  ControlUnit.cpp  ControlUnit.h  ControlUnit.ui  QtClock.cpp  QtClock.hpp  QtControlUnit.cpp  QtControlUnit.hpp  QtControlUnit.ui  QtDebugger.cpp  QtDebugger.hpp  QtDisplay.cpp  QtDisplay.hpp  QtKeypad.cpp  QtKeypad.hpp  QtMainSwitch.cpp  QtMainSwitch.hpp  QtMemory.cpp  QtMemory.hpp  QtMoisture.cpp  QtMoisture.hpp  QtTimer.cpp  QtTimer.hpp  QtValve.cpp  QtValve.hpp  QtValveGroup.cpp  QtValveGroup.hpp
code/lib/simulator-std/: CMakeLists.txt  StdDebugger.hpp  StdDisplay.hpp  StdKeypad.cpp  StdKeypad.hpp  StdMainSwitch.cpp  StdMemory.hpp  StdTimer.cpp  StdTimer.hpp  StdValveGroup.cpp
code/lib/ui-clay/: CMakeLists.txt  ClayClockUi.cpp  ClayClockUi.hpp  ClayControlUnit.hpp  ClayControlUnitUi.cpp  ClayControlUnitUi.hpp  ClayDebuggerUi.cpp  ClayDisplayUi.hpp  ClayMoistureUi.cpp  ClayMoistureUi.hpp  clay_renderer_raylib.c
code/src/: Button.cpp  Button.h  CMakeLists.txt  arduinoMain.cpp  desktopMain.cpp  main.cpp  webMain.cpp
(+3 files in other folders)
